[add] swagger into information news function;
